# Apollo

./: Cargo.toml
src/: main.rs
src/control/: buy_channel.rs  control_channel.rs  mod.rs  sell_channel.rs
src/file_control/: read.rs  types.rs  write.rs
src/finnhub/: finnhub.rs  helpers.rs  mod.rs  types.rs  utils.rs
src/helpers/: filters.rs  helpers.rs  mod.rs  types.rs
src/trading212/: helpers.rs  mod.rs  trading212.rs  types.rs
