[package]
name = "Apollo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv_codegen = "0.15.0"
serde_json = "1.0.111"
xlsxwriter = "0.6.0"
lazy_static = "1.4"
bigdecimal = "0.4"
chrono = "0.4.38"
governor = "0.6"
reqwest = "0.11"
dotenv = "0.15"
dirs = "5.0.1"
rand = "0.8"